fixed the horizontal scrollbar,apply background colors

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital@1&family=Oleo+Script&display=swap');
 
 /* CSS reset */
-* {
+*{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -9,19 +9,24 @@
 
 html,
 body {
+    width: 100%;
     height: 100vh;
-    width: 100vw;
     position: relative;
 }
 
 body {
     background-color: #000;
     font-family: 'Noto Serif', serif;
-    color: rgba(255, 68, 0, 0.61);
     height: 100vh;
     width: 100vw;
 }
+h1, h2{
+    color:rgba(255, 68, 0, 0.61);
+}
 
+p{
+    color:rgba(255, 68, 0, 0.61);
+}
 
 
 #my-avatar{
@@ -39,16 +44,18 @@ body {
 }
 
 #left-side {
-    width: 50%;
-    display: inline-block;
-    padding: 1rem;
+    position: absolute;
+    top: 16px;
+    left: 16px;
+}
+#left-side > a {
+    margin-right: 16px;
 }
 
-#rigth-side {
-    width: 49%;
-    display: inline-block;
-    text-align: right;
-    padding: 1rem;
+#right-side {
+    position: absolute;
+    top: 16px;
+    right: 16px;
 }
 
 a {
@@ -57,21 +64,11 @@ a {
     border-bottom: 1px dotted orangered;
 }
 
-header {
-    margin-top: 16px;
-}
-
-.nav-link {
-    margin-top: 8px;
-    margin-left: 8px;
-}
-
 footer {
     position: absolute;
-    bottom: 0;
+    bottom: 16px;
     left: 50%;
     transform: translateX(-50%);
-    margin-bottom: 16px;
 }
 footer a:first-child {
     margin-right: 16px;
@@ -84,3 +81,32 @@ footer a:first-child {
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+/* Project page */
+
+#hero-banner {
+    background: linear-gradient(45deg, rgb(66, 187, 235), rgb(240, 44, 142), rgb(230, 82, 82));
+    padding-top: 16px;
+    padding-bottom: 16px;
+}
+#hero-banner > div {
+    width: 50%;
+    margin-top: 0;
+    margin-right: auto;
+    margin-bottom: 0;
+    margin-left: auto;
+    padding: 1pc;
+}
+#hero-banner > div > div {
+    display: inline-block;
+}
+#hero-banner h1,
+#hero-banner h2 {
+    color: white;
+}
+h3 {
+    text-align: center;
+    font-size: 32px;
+    color: wheat;
+}
+
